@@ -1209,3 +1209,4 @@ Version history
 unreleased Version 0.51.1
   * editor:
     - restart semantic analysis if project settings change
+  * VS 2019 16.1+: the new project dialog now allows filtering by language tag "D"
